--- a/gam-lab/package.json
+++ b/gam-lab/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/d3-axis": "^3.0.6",
+    "@types/d3-brush": "^3.0.6",
+    "@types/d3-drag": "^3.0.7",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-selection": "^3.0.11",
+    "@types/d3-shape": "^3.1.8",
+    "@types/d3-zoom": "^3.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
